eks-cluster-with-istio-knative/sample/hello_world.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  labels:
    # networking.knative.dev/visibility: cluster-local # doesn't expose to the public internet
spec:
  template:
    metadata:
      # This is the name of our new "Revision," it must follow the convention {service-name}-{revision-name}
      # name: hello-world
      annotations:
        autoscaling.knative.dev/metric: "rps"
        autoscaling.knative.dev/target: "10"
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          ports:
            - containerPort: 8080
          env:
            - name: TARGET
              value: "World"
