eks-cluster-with-istio-knative/sample/routing_istio.yaml
# https://github.com/knative/docs/blob/main/docs/serving/samples/knative-routing-go/routing-internal.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entry-route
  namespace: default
spec:
  # This is the gateway shared in knative service mesh.
  gateways:
  - knative-serving/knative-ingress-gateway
  # Set host to the domain name that you own.
  hosts:
  - example.com
  http:
  - match:
    - uri:
        prefix: "/search"
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      authority: search-service.default.svc.cluster.local
    route:
      # Basically here we redirect the request to the internal gateway with
      # updated header "search-service.default.svc.cluster.local" so the request will
      # eventually be directed to Search service.
      - destination:
          host: knative-local-gateway.istio-system.svc.cluster.local 
          port:
            number: 80
        weight: 100
  - match:
    - uri:
        prefix: "/login"
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      authority: login-service.default.svc.cluster.local
    route:
      # Basically here we redirect the request to the internal gateway with
      # updated header "login-service.default.svc.cluster.local" so the request will
      # eventually be directed to Login service.
      - destination:
          host: knative-local-gateway.istio-system.svc.cluster.local
          port:
            number: 80
        weight: 100
